<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/rlAppBar"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_xxlarge"
                android:background="@color/appbar_bg_color">
                <ImageView
                    android:id="@+id/ivMenu"
                    android:src="@drawable/ic_menu_white_24dp"
                    android:layout_width="@dimen/margin_xlarge"
                    android:layout_height="@dimen/margin_xlarge"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:id="@+id/tvTitleAppBar"
                    android:text="@string/txt_appbar_title"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_regular_3x"/>
                <ImageView
                    android:id="@+id/ivSearch"
                    android:layout_width="@dimen/margin_xlarge"
                    android:layout_height="@dimen/margin_xlarge"
                    android:src="@drawable/ic_search_white_24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlBody"
                android:layout_below="@id/rlAppBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/appbar_bg_color">
                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/sliderUpcoming"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="@color/color_yellow"
                    app:sliderIndicatorUnselectedColor="@color/color_gray"
                    app:sliderScrollTimeInSec="1"
                    app:sliderStartAutoCycle="true"/>
                <TextView
                    android:id="@+id/tvPopularTitle"
                    android:text="@string/txt_popular_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sliderUpcoming"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:textColor="@color/color_text"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopularMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPopularTitle"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    tools:listitem="@layout/movie_items" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvShowTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#ff232d40"
                    android:layout_marginTop="@dimen/margin_large"
                    app:cardElevation="5dp"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:layout_below="@id/rvPopularMovies">
                    <RelativeLayout
                        android:id="@+id/rlCardView"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvShowTimeTitle"
                            android:text="@string/txt_showtime_title"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_heading_1x"
                            android:textStyle="bold"
                            android:layout_marginTop="@dimen/margin_medium_2"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tvSeeMore"
                            android:text="@string/txt_see_more"
                            android:textColor="@color/color_yellow"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_regular"
                            android:layout_below="@id/tvShowTimeTitle"

                            android:layout_marginTop="@dimen/margin_xlarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <View
                            android:id="@+id/vUnderline"
                            android:layout_below="@id/tvSeeMore"
                            android:layout_width="wrap_content"
                            android:background="@color/color_yellow"
                            android:layout_alignStart="@id/tvSeeMore"
                            android:layout_alignEnd="@id/tvSeeMore"
                            android:layout_height="2dp"
                            android:layout_marginBottom="@dimen/margin_large"/>
                        <ImageView
                            android:id="@+id/ivLocation"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="@dimen/margin_xxlarge"
                            android:layout_marginEnd="@dimen/margin_xlarge"
                            android:src="@drawable/ic_location_on_white_48dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabLayout"
                        app:tabMode="scrollable"
                        app:tabMaxWidth="0dp"
                        android:background="@color/appbar_bg_color"
                        app:tabIndicatorColor="@color/color_yellow"
                        app:tabIndicatorGravity="bottom"
                        app:tabGravity="fill"
                        app:tabTextColor="@color/color_text"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_marginTop="@dimen/margin_large"
                        android:layout_below="@id/cvShowTime"
                        app:tabSelectedTextColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMovies"
                    tools:listitem="@layout/movie_items"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:paddingTop="@dimen/margin_medium_2"
                    android:paddingBottom="@dimen/margin_large"
                    android:background="@color/color_dark"
                    android:layout_below="@id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvShowCaseTitle"
                    android:text="@string/txt_showcase_title"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_below="@id/rvMovies"
                    android:textColor="@color/color_text"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_regular"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvMoreShowCase"
                    android:text="@string/txt_more_showcase_title"
                    android:textSize="@dimen/text_regular"
                    android:layout_marginTop="@dimen/margin_large"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_below="@id/rvMovies"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:id="@+id/vShowCase"
                    android:layout_alignStart="@id/tvMoreShowCase"
                    android:layout_alignEnd="@id/tvMoreShowCase"
                    android:layout_below="@id/tvMoreShowCase"
                    android:layout_width="wrap_content"
                    android:background="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:layout_height="2dp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvShowCases"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_below="@id/vShowCase"
                    android:paddingBottom="@dimen/margin_medium_2"
                    tools:listitem="@layout/showcase_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RelativeLayout
                    android:id="@+id/rlActorList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rvShowCases"
                    android:background="@color/color_dark"
                    android:paddingTop="@dimen/margin_large"
                    android:paddingBottom="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_large">
                    <TextView
                        android:id="@+id/tvActorTitle"
                        android:text="@string/txt_actor_title"
                        android:textColor="@color/color_text"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_regular"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvMoreActor"
                        android:text="@string/txt_more_actor"
                        android:textSize="@dimen/text_regular"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:id="@+id/vActor"
                        android:layout_alignStart="@id/tvMoreActor"
                        android:layout_alignEnd="@id/tvMoreActor"
                        android:layout_below="@id/tvMoreActor"
                        android:layout_width="wrap_content"
                        android:background="@android:color/white"
                        android:backgroundTint="@android:color/white"
                        android:layout_height="2dp"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvPersonList"
                        android:layout_below="@id/vActor"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/margin_medium_2"
                        tools:listitem="@layout/person_items"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
            </RelativeLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>